--- a/app/src/main/res/layout/emergency_contact.xml
+++ b/app/src/main/res/layout/emergency_contact.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="3dp"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
@@ -10,78 +10,98 @@
 
 
     <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="135.0dip"
         android:layout_marginTop="5dp"
         android:background="#fffefefe"
-        android:layout_width="fill_parent"
-        android:layout_height="130.0dip"
         card_view:cardCornerRadius="6.0dip"
         card_view:cardElevation="12.0dip"
         card_view:cardUseCompatPadding="false">
 
-<LinearLayout
-    android:background="#fff"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-
         <LinearLayout
-            android:layout_weight="10"
-            android:id="@+id/MedicineCallLinearLayout"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="#fff"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/ContactNameTV"
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:id="@+id/MedicineCallLinearLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/ContactNameTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="7dp"
+                    android:text="Cpp"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/ContactNumberTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginLeft="7dip"
+                    android:layout_marginTop="1.5dip"
+                    android:text="01753740230"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/ContactEmailTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dip"
+                    android:layout_marginLeft="7dip"
+                    android:layout_marginTop="1.5dip"
+                    android:text="colliensepodder25@gmail.com"
+                    android:textColor="#000"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="7dp"
-                android:text="Cpp"
-                android:textColor="#000"
-                android:textSize="25sp" />
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="3dp"
+                >
 
-            <TextView
-                android:layout_marginTop="8dp"
-                android:id="@+id/ContactNumberTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="10dp"
-                android:text="01753740230"
-                android:textColor="#000"
-                android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/edits"
+                    android:layout_width="60dp"
+                    android:layout_height="50dp"
+                    android:drawableLeft="@drawable/ic_edit_black_24dp"
+                    android:gravity="center"
+                    android:paddingLeft="20dp" />
 
-            <TextView
-                android:layout_marginTop="8dp"
-                android:id="@+id/ContactEmailTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="10dp"
-                android:text="colliensepodder25@gmail.com"
-                android:textColor="#000"
-                android:textSize="20sp" />
+                <TextView
+                    android:layout_toRightOf="@+id/edits"
+                    android:id="@+id/dotssa"
+                    android:layout_width="60dp"
+                    android:layout_height="50dip"
+                    android:drawableLeft="@drawable/ic_delete_black_24dp"
+                    android:gravity="center"
+                    android:paddingLeft="20dp"
+                    />
+
+                <TextView
+                    android:layout_below="@+id/dotssa"
+                    android:id="@+id/emergencyContactTV"
+                    android:layout_width="120dp"
+                    android:layout_height="80dp"
+                    android:drawableLeft="@drawable/icon_phone"
+                    android:gravity="center"
+                    android:paddingLeft="45dp" />
+            </RelativeLayout>
+
+
         </LinearLayout>
-
-    <TextView
-      android:paddingLeft="20dp"
-        android:id="@+id/edits"
-        android:gravity="center"
-        android:layout_weight="2"
-        android:drawableLeft="@drawable/ic_edit_black_24dp"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:paddingLeft="20dp"
-        android:id="@+id/dotssa"
-        android:gravity="center"
-        android:layout_weight="2"
-        android:drawableLeft="@drawable/ic_delete_black_24dp"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
-</LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
