--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="editMyAppointmentTitle">false</item>
+    <item type="id" name="editMyAppointmentName">false</item>
+    <item type="id" name="editTimeAppointmentPicker">false</item>
     <item type="id" name="action0">false</item>
     <item type="id" name="action_bar">false</item>
     <item type="id" name="action_bar_activity_content">false</item>
