--- a/app/src/main/res/layout/doctor_information.xml
+++ b/app/src/main/res/layout/doctor_information.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
-    android:gravity="center_vertical"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -20,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="#fff"
             android:orientation="horizontal">
 
@@ -90,23 +89,39 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/editsdoctor"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_edit_black_24dp"
-                android:gravity="center"
-                android:paddingLeft="20dp" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="2dp">
 
-            <TextView
-                android:id="@+id/dotssaa"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_delete_black_24dp"
-                android:gravity="center"
-                android:paddingLeft="20dp" />
+                <TextView
+                    android:id="@+id/editsdoctor"
+                    android:layout_width="60dp"
+                    android:layout_height="73dp"
+                    android:drawableLeft="@drawable/ic_edit_black_24dp"
+                    android:gravity="center"
+                    android:paddingLeft="20dp" />
+
+                <TextView
+                    android:id="@+id/dotssaa"
+                    android:layout_width="60dp"
+                    android:layout_height="73dp"
+                    android:layout_toRightOf="@+id/editsdoctor"
+                    android:drawableLeft="@drawable/ic_delete_black_24dp"
+                    android:gravity="center"
+                    android:paddingLeft="20dp" />
+
+                <TextView
+                    android:id="@+id/emergencyDoctorTV"
+                    android:layout_width="120dp"
+                    android:layout_height="80dp"
+                    android:layout_below="@+id/dotssaa"
+                    android:drawableLeft="@drawable/icon_phone"
+                    android:gravity="center"
+                    android:paddingLeft="45dp" />
+            </RelativeLayout>
 
 
         </LinearLayout>
