--- a/app/src/main/res/menu/parents_nav.xml
+++ b/app/src/main/res/menu/parents_nav.xml
@@ -3,9 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/language_en"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="English"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/language_bn"
+        android:orderInCategory="100"
+        android:title="Bengali"
         app:showAsAction="never" />
 
 </menu>
