--- a/app/src/main/res/menu/activity_parents_nav_drawer.xml
+++ b/app/src/main/res/menu/activity_parents_nav_drawer.xml
@@ -60,15 +60,17 @@
         <item android:title="Communicate">
             <menu>
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_share"
                     android:icon="@drawable/ic_menu_share"
                     android:title="Share" />
 
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_moreapps"
                     android:icon="@drawable/ic_more_black_24dp"
                     android:title="More apps" />
-                
+
             </menu>
 
         </item>
@@ -78,21 +80,25 @@
         <item android:title="More">
             <menu>
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_help"
                     android:icon="@drawable/ic_forum_black_24dp"
                     android:title="Help &amp; Support" />
 
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_condition"
                     android:icon="@drawable/ic_help_black_24dp"
                     android:title="Terms &amp; Condition" />
 
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_privacy"
                     android:icon="@drawable/ic_security_black_24dp"
                     android:title="Privacy policy" />
 
                 <item
+                    android:checkable="true"
                     android:id="@+id/nav_about"
                     android:icon="@mipmap/ic_launcher_pcare"
                     android:title="About" />
