--- a/app/src/main/res/layout/activity_pillreminder.xml
+++ b/app/src/main/res/layout/activity_pillreminder.xml
@@ -78,7 +78,7 @@
             android:layout_width="200.0dip"
             android:layout_height="300.0dip"
             android:layout_margin="16.0dip"
-            android:src="@drawable/no_medi"
+            android:src="@drawable/no_medicine"
             app:civ_border_color="#ffeeeeee"
             app:civ_border_width="4.0dip"
             xmlns:app="http://schemas.android.com/apk/res-auto" />
