--- a/app/src/main/res/layout/activity_emergencycontacts.xml
+++ b/app/src/main/res/layout/activity_emergencycontacts.xml
@@ -41,66 +41,84 @@
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:id="@+id/rlayout"
-        android:orientation="vertical"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-           <android.support.v7.widget.RecyclerView
-               android:id="@+id/EContactsRV"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-
-           </android.support.v7.widget.RecyclerView>
-        <LinearLayout
-            android:gravity="center"
-            android:orientation="vertical"
-            android:id="@id/linearLayoutNoEmergencyContacts"
-            android:background="@color/white"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@id/imageViewNavItemIcon"
-                android:layout_width="150.0dip"
-                android:layout_height="150.0dip"
-                android:layout_margin="16.0dip"
-                android:src="@drawable/image_mobile_emergency_contacts"
-                android:layout_alignTop="@id/imageView4"
-                android:layout_centerHorizontal="true"
-                app:civ_border_color="#ffeeeeee"
-                app:civ_border_width="4.0dip"
-                xmlns:app="http://schemas.android.com/apk/res-auto" />
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/button_v">
 
-            <TextView
-                android:textSize="18.0sp"
-                android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                android:gravity="center"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50.0dip"
-                android:layout_marginRight="50.0dip"
-                android:text="" />
+            <LinearLayout
+                android:id="@+id/rlayout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:textSize="16.0sp"
-                android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                android:gravity="center"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50.0dip"
-                android:layout_marginTop="8.0dip"
-                android:layout_marginRight="50.0dip"
-                android:text="Any number will get a call in case of Emergency." />
-        </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/EContactsRV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false">
+
+                </android.support.v7.widget.RecyclerView>
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:id="@id/linearLayoutNoEmergencyContacts"
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@id/imageViewNavItemIcon"
+                        android:layout_width="150.0dip"
+                        android:layout_height="150.0dip"
+                        android:layout_margin="16.0dip"
+                        android:src="@drawable/image_mobile_emergency_contacts"
+                        android:layout_alignTop="@id/imageView4"
+                        android:layout_centerHorizontal="true"
+                        app:civ_border_color="#ffeeeeee"
+                        app:civ_border_width="4.0dip"
+                        xmlns:app="http://schemas.android.com/apk/res-auto" />
+
+                    <TextView
+                        android:textSize="18.0sp"
+                        android:textColor="@color/fiftyFivePercentOpaqueBlack"
+                        android:gravity="center"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="50.0dip"
+                        android:layout_marginRight="50.0dip"
+                        android:text="" />
+
+                    <TextView
+                        android:textSize="16.0sp"
+                        android:textColor="@color/fiftyFivePercentOpaqueBlack"
+                        android:gravity="center"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="50.0dip"
+                        android:layout_marginTop="8.0dip"
+                        android:layout_marginRight="50.0dip"
+                        android:text="Any number will get a call in case of Emergency." />
+                </LinearLayout>
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
         <android.support.v7.widget.CardView
+            android:id="@+id/button_v"
             android:background="#fffefefe"
             android:layout_width="fill_parent"
             android:layout_height="64.0dip"
             card_view:cardCornerRadius="6.0dip"
             card_view:cardElevation="12.0dip"
-            card_view:cardUseCompatPadding="false">
+            card_view:cardUseCompatPadding="false"
+            android:layout_alignParentBottom="true">
 
             <LinearLayout
                 android:onClick="goToAddActivity"
@@ -132,5 +150,8 @@
                     android:textAllCaps="true" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+
+    </RelativeLayout>
+
+
 </LinearLayout>
