--- a/app/src/main/res/layout/dialog_bmi_calculation_results.xml
+++ b/app/src/main/res/layout/dialog_bmi_calculation_results.xml
@@ -53,7 +53,7 @@
 
     <TextView
         android:textSize="14.0sp"
-        android:textColor="#2fa34e"
+        android:textColor="@color/green"
         android:gravity="end"
         android:id="@id/textViewOkay"
         android:paddingRight="24.0dip"
