--- a/app/src/main/res/drawable-v21/doctor_avatar_male.xml
+++ b/app/src/main/res/drawable-v21/doctor_avatar_male.xml
@@ -1,26 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="283.0dip" android:width="231.0dip" android:viewportWidth="231.2" android:viewportHeight="283.9"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffe6e7e8" android:pathData="M88.5,167.9h54.3v23.3h-54.3z" />
-    <path android:fillColor="#fff6ccb8" android:pathData="M145,174.8l-6.9,-3.2l0,-22.2l-44.9,0l0,22.2l-7,3l1.8,63.1l5.2,0l-1.2,45.6l49,0l-2.9,-45.6l5.1,0z" />
-    <path android:fillColor="#fff6ccb8" android:pathData="M93.2,149.4l0,11l44.8,9.8l0,-20.8z" />
-    <path android:fillColor="#ffe03943" android:pathData="M173.8,283.9c0.9,-33.1 -1,-98.8 -28.1,-109l-1.7,6.3c-2.9,8.3 -11.5,10.1 -29.1,10.1c-19.8,0 -26.2,-5.5 -28.5,-12.9l-0.9,-3.4c-27.1,10.2 -27.9,75.8 -26.5,109H173.8z" android:strokeAlpha="0.6" android:fillAlpha="0.6" />
-    <path android:fillColor="#ffe03943" android:pathData="M115.6,191.1l-13.8,14.5l-23.6,-28.2c0,0 14.7,-7.3 14.7,-7.3l5.5,5.1L115.6,191.1z" />
-    <path android:fillColor="#ffe03943" android:pathData="M138.3,170.2l-22.7,20.9l13.8,14.6l23.6,-28.2z" />
-    <path android:fillColor="#ffebebeb" android:pathData="M10.3,213.2L0,283.9h113.3c-7.8,-30.1 -28.5,-110.5 -28.5,-110.5L36,185C22.5,188.3 12.3,199.4 10.3,213.2z" />
-    <path android:fillColor="#ffebebeb" android:pathData="M195.3,185l-47.8,-11.6c0,0 -20.7,80.4 -28.5,110.5h112.2l-10.3,-70.8C218.9,199.4 208.8,188.2 195.3,185z" />
-    <path android:fillColor="#ffffffff" android:pathData="M80.7,207.8l-8.3,11.4l36.6,64.7l3.9,0l-24.7,-116l-18.9,9.7l0.7,21.4z" />
-    <path android:fillColor="#ffffffff" android:pathData="M122.2,283.9l36.6,-64.7l-8.3,-11.4l10.7,-8.8l0.7,-21.4l-18.9,-9.7l-24.7,116z" />
-    <path android:fillColor="#fff6ccb8" android:pathData="M165.2,86.6l1.5,-19.7c0,-25.8 -24.7,-46.7 -50.5,-46.7c-25.8,0 -50.5,20.9 -50.5,46.7l1.5,19.7c-1.4,0.3 -2.7,1 -3.8,1.9c-2,1.7 -3.3,4.3 -3.3,7.1v9.7c0,5.1 4.1,9.3 9.3,9.3c0,24.4 29.3,47.5 46.8,47.5c17.5,0 46.8,-23.1 46.8,-47.5c5.1,0 9.3,-4.2 9.3,-9.3v-9.7C172.4,91.3 169.3,87.6 165.2,86.6z" />
-    <path android:fillColor="#fff6ccb8" android:pathData="M165.2,86.6l1.5,-19.7c0,-25.8 -24.7,-46.7 -50.5,-46.7c0,0 0,0 0,0v66.4C109.4,101 105,122 105,122h11.2v40.2c0,0 0,0 0,0c0,0 0,0 0,0c17.5,0 46.8,-23.1 46.8,-47.5c5.1,0 9.3,-4.2 9.3,-9.3v-9.7C172.4,91.3 169.3,87.6 165.2,86.6z" android:strokeAlpha="0.8" android:fillAlpha="0.8" />
-    <path android:fillColor="#ff4f3c30" android:pathData="M169.1,86.4c-1.2,5.1 -2.7,7.9 -4.5,11.9c-0.4,0.8 -1.6,0.6 -1.6,-0.3c0,-5.3 -0.1,-14 -0.1,-14l-10.5,-31.8c0,0 -16.6,3.6 -36.1,4.4c-19.5,-0.8 -36.1,-4.4 -36.1,-4.4L69.5,83.9c0,0 0,8.5 0,13.8c0,0.9 -1.3,1.2 -1.6,0.3c-1.7,-4 -3.9,-9.3 -4.4,-11.7c-2.6,-11 -3.7,-21.9 -3.2,-32.1c0.2,-3.6 0.6,-7.2 1.3,-10.6c0.9,-4.8 2.2,-9.4 4,-13.6C65.5,30.1 77,0 116.3,0c0.8,0 1.6,0 2.4,0c10.6,0 18.1,2 25.3,5.6c0,0 11.8,5.7 21.5,1c0.3,-0.1 0.7,0.1 0.7,0.4c-0.2,1.3 -0.7,4 -2.6,6.5c2.5,0.1 5.4,-0.1 8.7,-0.8c0,0 0.1,0 0.1,0v0.1c0.2,6.6 -2,12.4 -5.2,17.3c1.8,4.2 3.1,8.6 4,13.3c0.7,3.4 1.1,7 1.3,10.6C172.8,64.3 171.7,75.3 169.1,86.4z" />
-    <path android:fillColor="#ffffffff" android:pathData="M168.9,78.9h-10.1c-3.2,-1.7 -7.7,-2.7 -13.9,-2.7c-10.4,0 -17.5,2 -21.1,5.9c-1.7,-0.9 -4.3,-2 -7.2,-2c-2.9,0 -5.4,1.1 -7.1,2c-3.6,-3.9 -10.7,-5.9 -21.1,-5.9c-6.3,0 -10.7,1.1 -13.9,2.7H64.2v7.3l3.3,1.2c-0.3,1.4 -0.5,2.8 -0.5,4.1c0,9.1 2.2,21.1 21.3,21.1c17,0 21.5,-10.5 23.6,-20.7c0.3,-1.6 0.4,-3 0.1,-4.4c0.8,-0.5 2.2,-1 4.5,-1c2.3,0 3.7,0.5 4.5,1c-0.2,1.4 -0.2,2.8 0.1,4.4c2.1,10.2 6.6,20.7 23.6,20.7c19.1,0 21.3,-12 21.3,-21.1c0,-1.3 -0.1,-2.7 -0.5,-4.1l3.3,-1.2V78.9zM108.3,91.1c-2.2,10.7 -6.4,17.7 -20,17.7c-15.4,0 -17.5,-8.3 -17.5,-17.4c0,-2.9 0,-11.6 17.5,-11.6c12.1,0 16.9,2.7 18.7,5C108.4,86.6 108.8,88.6 108.3,91.1zM144.8,108.8c-13.5,0 -17.7,-7.1 -20,-17.7c-0.5,-2.5 -0.1,-4.5 1.2,-6.1c1.9,-2.3 6.6,-5 18.7,-5c17.5,0 17.5,8.7 17.5,11.6C162.4,100.5 160.3,108.8 144.8,108.8z" android:strokeAlpha="0.0" android:fillAlpha="0.0" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M158.8,211.4c-0.1,-1.7 -1.9,-38.9 -20.7,-48.4v4.3c15.3,10 17,43.8 17,44.2l0.1,1.9l3.7,-0.2L158.8,211.4z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M93.2,167v-4.3c-30.8,15.6 -17.9,96 -17.3,99.6l0.3,1.8l3.7,-0.6l-0.3,-1.8C79.4,260.8 67,183.6 93.2,167z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M169.7,270c-3.5,-0.4 -6.7,-1.5 -9.6,-3.2c10.2,-8.5 16,-23.3 15.3,-36.3c-0.7,-12.9 -7.8,-20.9 -18.5,-20.9c-10.7,0 -17.8,8 -18.5,20.9c-0.7,13 5.1,27.8 15.3,36.3c-2.9,1.7 -6.1,2.8 -9.6,3.2c-1,0.1 -1.8,1 -1.7,2.1c0.1,1 0.9,1.7 1.9,1.7c0.1,0 0.1,0 0.2,0c4.6,-0.5 8.7,-2.1 12.4,-4.5c3.7,2.4 7.9,4 12.4,4.5c0.1,0 0.1,0 0.2,0c0.9,0 1.8,-0.7 1.9,-1.7C171.5,271 170.7,270.1 169.7,270zM142.1,230.7c0.3,-5.2 2.3,-17.3 14.8,-17.3c12.5,0 14.5,12.1 14.8,17.3c0.7,12.4 -5,26.4 -14.8,34C147.1,257.2 141.5,243.1 142.1,230.7z" />
-    <path android:fillColor="#ff42404d" android:pathData="M141.3,274.8c-1.1,0 -2.2,-0.1 -3.3,-0.2c-1.5,-0.2 -2.7,-1.5 -2.5,-3.1c0.2,-1.5 1.5,-2.6 3.1,-2.5c1.8,0.2 3.6,0.2 5.3,0c1.5,-0.2 2.9,0.9 3.1,2.5c0.2,1.5 -0.9,2.9 -2.5,3.1C143.5,274.8 142.4,274.8 141.3,274.8z" />
-    <path android:fillColor="#ff42404d" android:pathData="M172.4,274.8c-1.1,0 -2.2,-0.1 -3.2,-0.2c-1.5,-0.2 -2.7,-1.5 -2.5,-3.1c0.2,-1.5 1.6,-2.7 3.1,-2.5c1.7,0.2 3.5,0.2 5.3,0c1.5,-0.1 2.9,1 3.1,2.5c0.2,1.5 -1,2.9 -2.5,3.1C174.6,274.8 173.5,274.8 172.4,274.8z" />
-    <path android:fillColor="#ffe6e7e8" android:pathData="M77.7,262.4m-11.2,0a11.2,11.2 0,1 1,22.4 0a11.2,11.2 0,1 1,-22.4 0" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M77.7,251.2c6.2,0 11.2,5 11.2,11.2c0,6.2 -5,11.2 -11.2,11.2c-6.2,0 -11.2,-5 -11.2,-11.2C66.5,256.2 71.5,251.2 77.7,251.2M77.7,247.5c-8.2,0 -15,6.7 -15,15c0,8.2 6.7,15 15,15c8.2,0 15,-6.7 15,-15C92.7,254.2 86,247.5 77.7,247.5L77.7,247.5z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M77.7,262.4m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="231.0dip"
+    android:height="283.0dip"
+    android:viewportHeight="283.9"
+    android:viewportWidth="231.2">
+    <path
+        android:fillColor="#ffe6e7e8"
+        android:pathData="M88.5,167.9h54.3v23.3h-54.3z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M145,174.8l-6.9,-3.2l0,-22.2l-44.9,0l0,22.2l-7,3l1.8,63.1l5.2,0l-1.2,45.6l49,0l-2.9,-45.6l5.1,0z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M93.2,149.4l0,11l44.8,9.8l0,-20.8z" />
+    <path
+        android:fillAlpha="0.6"
+        android:fillColor="#f80c3e89"
+        android:pathData="M173.8,283.9c0.9,-33.1 -1,-98.8 -28.1,-109l-1.7,6.3c-2.9,8.3 -11.5,10.1 -29.1,10.1c-19.8,0 -26.2,-5.5 -28.5,-12.9l-0.9,-3.4c-27.1,10.2 -27.9,75.8 -26.5,109H173.8z"
+        android:strokeAlpha="0.6" />
+    <path
+        android:fillColor="#0a0a0a"
+        android:pathData="M115.6,222.7m-3.9,0a3.9,3.9 0,1 1,7.8 0a3.9,3.9 0,1 1,-7.8 0" />
+    <path
+        android:fillColor="#0a0a0a"
+        android:pathData="M115.6,261m-3.9,0a3.9,3.9 0,1 1,7.8 0a3.9,3.9 0,1 1,-7.8 0" />
+
+    <path
+        android:fillColor="#f80c3e89"
+        android:pathData="M115.6,191.1l-13.8,14.5l-23.6,-28.2c0,0 14.7,-7.3 14.7,-7.3l5.5,5.1L115.6,191.1z" />
+    <path
+        android:fillColor="#f80c3e89"
+        android:pathData="M138.3,170.2l-22.7,20.9l13.8,14.6l23.6,-28.2z" />
+    <path
+        android:fillColor="#ffebebeb"
+        android:pathData="M10.3,213.2L0,283.9h113.3c-7.8,-30.1 -28.5,-110.5 -28.5,-110.5L36,185C22.5,188.3 12.3,199.4 10.3,213.2z" />
+    <path
+        android:fillColor="#ffebebeb"
+        android:pathData="M195.3,185l-47.8,-11.6c0,0 -20.7,80.4 -28.5,110.5h112.2l-10.3,-70.8C218.9,199.4 208.8,188.2 195.3,185z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M80.7,207.8l-8.3,11.4l36.6,64.7l3.9,0l-24.7,-116l-18.9,9.7l0.7,21.4z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M122.2,283.9l36.6,-64.7l-8.3,-11.4l10.7,-8.8l0.7,-21.4l-18.9,-9.7l-24.7,116z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M165.2,86.6l1.5,-19.7c0,-25.8 -24.7,-46.7 -50.5,-46.7c-25.8,0 -50.5,20.9 -50.5,46.7l1.5,19.7c-1.4,0.3 -2.7,1 -3.8,1.9c-2,1.7 -3.3,4.3 -3.3,7.1v9.7c0,5.1 4.1,9.3 9.3,9.3c0,24.4 29.3,47.5 46.8,47.5c17.5,0 46.8,-23.1 46.8,-47.5c5.1,0 9.3,-4.2 9.3,-9.3v-9.7C172.4,91.3 169.3,87.6 165.2,86.6z" />
+    <path
+        android:fillAlpha="0.8"
+        android:fillColor="#fff6ccb8"
+        android:pathData="M165.2,86.6l1.5,-19.7c0,-25.8 -24.7,-46.7 -50.5,-46.7c0,0 0,0 0,0v66.4C109.4,101 105,122 105,122h11.2v40.2c0,0 0,0 0,0c0,0 0,0 0,0c17.5,0 46.8,-23.1 46.8,-47.5c5.1,0 9.3,-4.2 9.3,-9.3v-9.7C172.4,91.3 169.3,87.6 165.2,86.6z"
+        android:strokeAlpha="0.8" />
+    <path
+        android:fillColor="#ff4f3c30"
+        android:pathData="M169.1,86.4c-1.2,5.1 -2.7,7.9 -4.5,11.9c-0.4,0.8 -1.6,0.6 -1.6,-0.3c0,-5.3 -0.1,-14 -0.1,-14l-10.5,-31.8c0,0 -16.6,3.6 -36.1,4.4c-19.5,-0.8 -36.1,-4.4 -36.1,-4.4L69.5,83.9c0,0 0,8.5 0,13.8c0,0.9 -1.3,1.2 -1.6,0.3c-1.7,-4 -3.9,-9.3 -4.4,-11.7c-2.6,-11 -3.7,-21.9 -3.2,-32.1c0.2,-3.6 0.6,-7.2 1.3,-10.6c0.9,-4.8 2.2,-9.4 4,-13.6C65.5,30.1 77,0 116.3,0c0.8,0 1.6,0 2.4,0c10.6,0 18.1,2 25.3,5.6c0,0 11.8,5.7 21.5,1c0.3,-0.1 0.7,0.1 0.7,0.4c-0.2,1.3 -0.7,4 -2.6,6.5c2.5,0.1 5.4,-0.1 8.7,-0.8c0,0 0.1,0 0.1,0v0.1c0.2,6.6 -2,12.4 -5.2,17.3c1.8,4.2 3.1,8.6 4,13.3c0.7,3.4 1.1,7 1.3,10.6C172.8,64.3 171.7,75.3 169.1,86.4z" />
+    <path
+        android:fillAlpha="0.0"
+        android:fillColor="#ffffffff"
+        android:pathData="M168.9,78.9h-10.1c-3.2,-1.7 -7.7,-2.7 -13.9,-2.7c-10.4,0 -17.5,2 -21.1,5.9c-1.7,-0.9 -4.3,-2 -7.2,-2c-2.9,0 -5.4,1.1 -7.1,2c-3.6,-3.9 -10.7,-5.9 -21.1,-5.9c-6.3,0 -10.7,1.1 -13.9,2.7H64.2v7.3l3.3,1.2c-0.3,1.4 -0.5,2.8 -0.5,4.1c0,9.1 2.2,21.1 21.3,21.1c17,0 21.5,-10.5 23.6,-20.7c0.3,-1.6 0.4,-3 0.1,-4.4c0.8,-0.5 2.2,-1 4.5,-1c2.3,0 3.7,0.5 4.5,1c-0.2,1.4 -0.2,2.8 0.1,4.4c2.1,10.2 6.6,20.7 23.6,20.7c19.1,0 21.3,-12 21.3,-21.1c0,-1.3 -0.1,-2.7 -0.5,-4.1l3.3,-1.2V78.9zM108.3,91.1c-2.2,10.7 -6.4,17.7 -20,17.7c-15.4,0 -17.5,-8.3 -17.5,-17.4c0,-2.9 0,-11.6 17.5,-11.6c12.1,0 16.9,2.7 18.7,5C108.4,86.6 108.8,88.6 108.3,91.1zM144.8,108.8c-13.5,0 -17.7,-7.1 -20,-17.7c-0.5,-2.5 -0.1,-4.5 1.2,-6.1c1.9,-2.3 6.6,-5 18.7,-5c17.5,0 17.5,8.7 17.5,11.6C162.4,100.5 160.3,108.8 144.8,108.8z"
+        android:strokeAlpha="0.0" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M158.8,211.4c-0.1,-1.7 -1.9,-38.9 -20.7,-48.4v4.3c15.3,10 17,43.8 17,44.2l0.1,1.9l3.7,-0.2L158.8,211.4z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M93.2,167v-4.3c-30.8,15.6 -17.9,96 -17.3,99.6l0.3,1.8l3.7,-0.6l-0.3,-1.8C79.4,260.8 67,183.6 93.2,167z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M169.7,270c-3.5,-0.4 -6.7,-1.5 -9.6,-3.2c10.2,-8.5 16,-23.3 15.3,-36.3c-0.7,-12.9 -7.8,-20.9 -18.5,-20.9c-10.7,0 -17.8,8 -18.5,20.9c-0.7,13 5.1,27.8 15.3,36.3c-2.9,1.7 -6.1,2.8 -9.6,3.2c-1,0.1 -1.8,1 -1.7,2.1c0.1,1 0.9,1.7 1.9,1.7c0.1,0 0.1,0 0.2,0c4.6,-0.5 8.7,-2.1 12.4,-4.5c3.7,2.4 7.9,4 12.4,4.5c0.1,0 0.1,0 0.2,0c0.9,0 1.8,-0.7 1.9,-1.7C171.5,271 170.7,270.1 169.7,270zM142.1,230.7c0.3,-5.2 2.3,-17.3 14.8,-17.3c12.5,0 14.5,12.1 14.8,17.3c0.7,12.4 -5,26.4 -14.8,34C147.1,257.2 141.5,243.1 142.1,230.7z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M141.3,274.8c-1.1,0 -2.2,-0.1 -3.3,-0.2c-1.5,-0.2 -2.7,-1.5 -2.5,-3.1c0.2,-1.5 1.5,-2.6 3.1,-2.5c1.8,0.2 3.6,0.2 5.3,0c1.5,-0.2 2.9,0.9 3.1,2.5c0.2,1.5 -0.9,2.9 -2.5,3.1C143.5,274.8 142.4,274.8 141.3,274.8z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M172.4,274.8c-1.1,0 -2.2,-0.1 -3.2,-0.2c-1.5,-0.2 -2.7,-1.5 -2.5,-3.1c0.2,-1.5 1.6,-2.7 3.1,-2.5c1.7,0.2 3.5,0.2 5.3,0c1.5,-0.1 2.9,1 3.1,2.5c0.2,1.5 -1,2.9 -2.5,3.1C174.6,274.8 173.5,274.8 172.4,274.8z" />
+    <path
+        android:fillColor="#ffe6e7e8"
+        android:pathData="M77.7,262.4m-11.2,0a11.2,11.2 0,1 1,22.4 0a11.2,11.2 0,1 1,-22.4 0" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M77.7,251.2c6.2,0 11.2,5 11.2,11.2c0,6.2 -5,11.2 -11.2,11.2c-6.2,0 -11.2,-5 -11.2,-11.2C66.5,256.2 71.5,251.2 77.7,251.2M77.7,247.5c-8.2,0 -15,6.7 -15,15c0,8.2 6.7,15 15,15c8.2,0 15,-6.7 15,-15C92.7,254.2 86,247.5 77.7,247.5L77.7,247.5z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M77.7,262.4m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0" />
 </vector>
