--- a/app/src/main/res/drawable-v21/image_zero_case_doctors.xml
+++ b/app/src/main/res/drawable-v21/image_zero_case_doctors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="150.0dip" android:width="150.0dip" android:viewportWidth="150.0" android:viewportHeight="150.0"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="150.0dip"
+    android:height="150.0dip"
+    android:viewportHeight="150.0"
+    android:viewportWidth="150.0">
     <path
         android:fillColor="#ffffffff"
         android:pathData="M75,75m-75,0a75,75 0,1 1,150 0a75,75 0,1 1,-150 0" />
@@ -16,8 +19,10 @@
 
     //male tie
     <path
+        android:fillAlpha="0.6"
         android:fillColor="#f80c3e89"
-        android:pathData="M68.4,150.7c0.3,-24.8 -0.4,-58.5 -11,-62.5l-0.7,2.5c-1.1,3.3 -4.5,4 -11.4,4c-7.8,0 -10.3,-2.2 -11.2,-5.1l-0.4,-1.3c-10.7,4 -11,37.7 -10.4,62.5H68.4z" android:strokeAlpha="0.6" android:fillAlpha="0.6" />
+        android:pathData="M68.4,150.7c0.3,-24.8 -0.4,-58.5 -11,-62.5l-0.7,2.5c-1.1,3.3 -4.5,4 -11.4,4c-7.8,0 -10.3,-2.2 -11.2,-5.1l-0.4,-1.3c-10.7,4 -11,37.7 -10.4,62.5H68.4z"
+        android:strokeAlpha="0.6" />
 
     //male left kolar
     <path
@@ -43,54 +48,113 @@
     <path
         android:fillColor="#fff6ccb8"
         android:pathData="M65,53.4l0.6,-7.8c0,-10.2 -9.7,-18.4 -19.9,-18.4c-10.2,0 -19.9,8.2 -19.9,18.4l0.6,7.8c-0.6,0.1 -1.1,0.4 -1.5,0.8c-0.8,0.7 -1.3,1.7 -1.3,2.8v3.8c0,2 1.6,3.7 3.7,3.7c0,9.6 11.5,18.7 18.4,18.7c6.9,0 18.4,-9.1 18.4,-18.7c2,0 3.7,-1.7 3.7,-3.7V57C67.8,55.2 66.6,53.8 65,53.4z" />
-    <path android:fillColor="#ff4f3c30" android:pathData="M66.5,53.3c-0.5,2 -1.1,3.1 -1.8,4.7c-0.1,0.3 -0.6,0.2 -0.6,-0.1c0,-2.1 0,-5.5 0,-5.5l-4.1,-12.5c0,0 -6.5,1.4 -14.2,1.7c-7.7,-0.3 -14.2,-1.7 -14.2,-1.7l-4.2,12.5c0,0 0,3.3 0,5.4c0,0.4 -0.5,0.5 -0.6,0.1c-0.7,-1.6 -1.5,-3.7 -1.7,-4.6c-1,-4.3 -1.5,-8.6 -1.3,-12.6c0.1,-1.4 0.2,-2.8 0.5,-4.2c0.3,-1.9 0.9,-3.7 1.6,-5.3c0,0 4.5,-11.9 19.9,-11.8c0.3,0 0.6,0 0.9,0c4.2,0 7.1,0.8 9.9,2.2c0,0 4.6,2.2 8.5,0.4c0.1,-0.1 0.3,0 0.3,0.2c-0.1,0.5 -0.3,1.6 -1,2.5c1,0 2.1,0 3.4,-0.3c0,0 0,0 0,0v0.1c0.1,2.6 -0.8,4.9 -2.1,6.8c0.7,1.6 1.2,3.4 1.6,5.2c0.3,1.3 0.4,2.7 0.5,4.2C68,44.6 67.5,49 66.5,53.3z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M62.4,102.5c0,-0.7 -0.7,-15.3 -8.1,-19v1.7c6,3.9 6.7,17.2 6.7,17.4l0,0.7l1.5,-0.1L62.4,102.5z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M36.6,85v-1.7c-12.1,6.1 -7,37.8 -6.8,39.2l0.1,0.7l1.5,-0.2l-0.1,-0.7C31.2,121.9 26.4,91.6 36.6,85z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M66.8,125.5c-1.4,-0.1 -2.6,-0.6 -3.8,-1.2c4,-3.3 6.3,-9.2 6,-14.3c-0.3,-5.1 -3.1,-8.2 -7.3,-8.2c-4.2,0 -7,3.1 -7.3,8.2c-0.3,5.1 2,10.9 6,14.3c-1.2,0.7 -2.4,1.1 -3.8,1.2c-0.4,0 -0.7,0.4 -0.7,0.8c0,0.4 0.4,0.7 0.7,0.7c0,0 0.1,0 0.1,0c1.8,-0.2 3.4,-0.8 4.9,-1.8c1.5,0.9 3.1,1.6 4.9,1.8c0,0 0.1,0 0.1,0c0.4,0 0.7,-0.3 0.7,-0.7C67.5,125.9 67.2,125.6 66.8,125.5zM55.9,110.1c0.1,-2.1 0.9,-6.8 5.8,-6.8c4.9,0 5.7,4.8 5.8,6.8c0.3,4.9 -2,10.4 -5.8,13.4C57.9,120.5 55.6,115 55.9,110.1z" />
-    <path android:fillColor="#ff42404d" android:pathData="M55.6,127.4c-0.4,0 -0.9,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C56.4,127.4 56,127.4 55.6,127.4z" />
-    <path android:fillColor="#ff42404d" android:pathData="M67.8,127.4c-0.4,0 -0.8,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C68.7,127.4 68.3,127.4 67.8,127.4z" />
-    <path android:fillColor="#ffe6e7e8" android:pathData="M30.6,122.5m-4.4,0a4.4,4.4 0,1 1,8.8 0a4.4,4.4 0,1 1,-8.8 0" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M30.6,118.1c2.4,0 4.4,2 4.4,4.4c0,2.4 -2,4.4 -4.4,4.4c-2.4,0 -4.4,-2 -4.4,-4.4C26.2,120.1 28.1,118.1 30.6,118.1M30.6,116.7c-3.2,0 -5.9,2.6 -5.9,5.9s2.6,5.9 5.9,5.9c3.2,0 5.9,-2.6 5.9,-5.9S33.8,116.7 30.6,116.7L30.6,116.7z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M30.6,122.5m-3.1,0a3.1,3.1 0,1 1,6.2 0a3.1,3.1 0,1 1,-6.2 0" />
-    <path android:fillColor="#ff4f3c30" android:pathData="M134.8,92.3c0,0.2 -0.1,0.3 -0.1,0.5c-0.4,1.6 -0.8,3.1 -1.3,4.5c-0.8,2.4 -1.7,4.4 -2.7,5.8c-0.5,0.7 -1.1,1.3 -1.7,1.7c-1.2,0.9 -2.7,1.4 -4.5,1.4H96.6c-1.9,0 -3.5,-0.5 -4.7,-1.5c-0.6,-0.4 -1.1,-1 -1.5,-1.6c-1.1,-1.5 -1.9,-3.4 -2.7,-5.8c-0.5,-1.4 -0.9,-2.9 -1.3,-4.5c0,-0.2 -0.1,-0.3 -0.1,-0.5C81.9,73 83.2,39 93.1,28.7c4.1,-4.2 9.1,-7.9 17.4,-7.9c6.6,0 11.1,2.3 14.8,5.4c0.9,0.8 1.8,1.6 2.7,2.5c0.3,0.4 0.7,0.7 1,1.1C138,41.3 139,73.7 134.8,92.3z" />
-    <path android:fillColor="#ffe6e7e8" android:pathData="M102.2,88.2l19.4,0l1.5,8.8l-22.4,0z" />
-    <path android:fillColor="#fff6ccb8" android:pathData="M119.5,89.4l0,-9.7l-15.2,0l0,9.7l-3.8,0.3l1.8,60.9l17.7,0.1l3.4,-61z" />
+    <path
+        android:fillColor="#ff4f3c30"
+        android:pathData="M66.5,53.3c-0.5,2 -1.1,3.1 -1.8,4.7c-0.1,0.3 -0.6,0.2 -0.6,-0.1c0,-2.1 0,-5.5 0,-5.5l-4.1,-12.5c0,0 -6.5,1.4 -14.2,1.7c-7.7,-0.3 -14.2,-1.7 -14.2,-1.7l-4.2,12.5c0,0 0,3.3 0,5.4c0,0.4 -0.5,0.5 -0.6,0.1c-0.7,-1.6 -1.5,-3.7 -1.7,-4.6c-1,-4.3 -1.5,-8.6 -1.3,-12.6c0.1,-1.4 0.2,-2.8 0.5,-4.2c0.3,-1.9 0.9,-3.7 1.6,-5.3c0,0 4.5,-11.9 19.9,-11.8c0.3,0 0.6,0 0.9,0c4.2,0 7.1,0.8 9.9,2.2c0,0 4.6,2.2 8.5,0.4c0.1,-0.1 0.3,0 0.3,0.2c-0.1,0.5 -0.3,1.6 -1,2.5c1,0 2.1,0 3.4,-0.3c0,0 0,0 0,0v0.1c0.1,2.6 -0.8,4.9 -2.1,6.8c0.7,1.6 1.2,3.4 1.6,5.2c0.3,1.3 0.4,2.7 0.5,4.2C68,44.6 67.5,49 66.5,53.3z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M62.4,102.5c0,-0.7 -0.7,-15.3 -8.1,-19v1.7c6,3.9 6.7,17.2 6.7,17.4l0,0.7l1.5,-0.1L62.4,102.5z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M36.6,85v-1.7c-12.1,6.1 -7,37.8 -6.8,39.2l0.1,0.7l1.5,-0.2l-0.1,-0.7C31.2,121.9 26.4,91.6 36.6,85z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M66.8,125.5c-1.4,-0.1 -2.6,-0.6 -3.8,-1.2c4,-3.3 6.3,-9.2 6,-14.3c-0.3,-5.1 -3.1,-8.2 -7.3,-8.2c-4.2,0 -7,3.1 -7.3,8.2c-0.3,5.1 2,10.9 6,14.3c-1.2,0.7 -2.4,1.1 -3.8,1.2c-0.4,0 -0.7,0.4 -0.7,0.8c0,0.4 0.4,0.7 0.7,0.7c0,0 0.1,0 0.1,0c1.8,-0.2 3.4,-0.8 4.9,-1.8c1.5,0.9 3.1,1.6 4.9,1.8c0,0 0.1,0 0.1,0c0.4,0 0.7,-0.3 0.7,-0.7C67.5,125.9 67.2,125.6 66.8,125.5zM55.9,110.1c0.1,-2.1 0.9,-6.8 5.8,-6.8c4.9,0 5.7,4.8 5.8,6.8c0.3,4.9 -2,10.4 -5.8,13.4C57.9,120.5 55.6,115 55.9,110.1z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M55.6,127.4c-0.4,0 -0.9,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C56.4,127.4 56,127.4 55.6,127.4z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M67.8,127.4c-0.4,0 -0.8,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C68.7,127.4 68.3,127.4 67.8,127.4z" />
+    <path
+        android:fillColor="#ffe6e7e8"
+        android:pathData="M30.6,122.5m-4.4,0a4.4,4.4 0,1 1,8.8 0a4.4,4.4 0,1 1,-8.8 0" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M30.6,118.1c2.4,0 4.4,2 4.4,4.4c0,2.4 -2,4.4 -4.4,4.4c-2.4,0 -4.4,-2 -4.4,-4.4C26.2,120.1 28.1,118.1 30.6,118.1M30.6,116.7c-3.2,0 -5.9,2.6 -5.9,5.9s2.6,5.9 5.9,5.9c3.2,0 5.9,-2.6 5.9,-5.9S33.8,116.7 30.6,116.7L30.6,116.7z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M30.6,122.5m-3.1,0a3.1,3.1 0,1 1,6.2 0a3.1,3.1 0,1 1,-6.2 0" />
+    <path
+        android:fillColor="#ff4f3c30"
+        android:pathData="M134.8,92.3c0,0.2 -0.1,0.3 -0.1,0.5c-0.4,1.6 -0.8,3.1 -1.3,4.5c-0.8,2.4 -1.7,4.4 -2.7,5.8c-0.5,0.7 -1.1,1.3 -1.7,1.7c-1.2,0.9 -2.7,1.4 -4.5,1.4H96.6c-1.9,0 -3.5,-0.5 -4.7,-1.5c-0.6,-0.4 -1.1,-1 -1.5,-1.6c-1.1,-1.5 -1.9,-3.4 -2.7,-5.8c-0.5,-1.4 -0.9,-2.9 -1.3,-4.5c0,-0.2 -0.1,-0.3 -0.1,-0.5C81.9,73 83.2,39 93.1,28.7c4.1,-4.2 9.1,-7.9 17.4,-7.9c6.6,0 11.1,2.3 14.8,5.4c0.9,0.8 1.8,1.6 2.7,2.5c0.3,0.4 0.7,0.7 1,1.1C138,41.3 139,73.7 134.8,92.3z" />
+    <path
+        android:fillColor="#ffe6e7e8"
+        android:pathData="M102.2,88.2l19.4,0l1.5,8.8l-22.4,0z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M119.5,89.4l0,-9.7l-15.2,0l0,9.7l-3.8,0.3l1.8,60.9l17.7,0.1l3.4,-61z" />
 
     //female Throat
-    <path android:fillColor="#fff6ccb8" android:pathData="M104.3,79.7l0,5l15.2,4.7l0,-9.7z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M104.3,79.7l0,5l15.2,4.7l0,-9.7z" />
 
     //female tie
     <path
+        android:fillAlpha="0.6"
         android:fillColor="#080808"
         android:pathData="M132.3,150.7c0.4,-22.8 0.2,-56.4 -9.9,-60.2l-0.6,2.2c-1,2.9 -3.7,3.2 -9.9,3.2c-7,0 -9.7,-1.5 -10.6,-4.2l-0.3,-1.2c-10.2,3.8 -9.9,37.4 -9.3,60.2H132.3z"
-        android:strokeAlpha="0.6"
-        android:fillAlpha="0.6" />
-    <path android:fillColor="#0a0a0a"
+        android:strokeAlpha="0.6" />
+    <path
+        android:fillColor="#0a0a0a"
         android:pathData="M111.9,106.9m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0" />
     <path
-        android:fillColor="#0b0b0b"
+        android:fillColor="#0a0a0a"
         android:pathData="M111.9,121.9m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0" />
-    <path android:fillColor="#0a0909" android:pathData="M111.9,96.2l-4.9,5.2l-8.4,-10c0,0 5.2,-2.6 5.2,-2.6l2,1.8L111.9,96.2z" />
-    <path android:fillColor="#080808" android:pathData="M120,88.8l-8.1,7.4l4.9,5.2l8.4,-10z" />
+    <path
+        android:fillColor="#0a0909"
+        android:pathData="M111.9,96.2l-4.9,5.2l-8.4,-10c0,0 5.2,-2.6 5.2,-2.6l2,1.8L111.9,96.2z" />
+    <path
+        android:fillColor="#0a0909"
+        android:pathData="M120,88.8l-8.1,7.4l4.9,5.2l8.4,-10z" />
 
     //female leftside
-    <path android:fillColor="#ffdddddd" android:pathData="M101.6,90.2l-15.1,5c-3.5,1.2 -6.1,4.1 -6.9,7.8l-5.7,47.7h30.8C104.2,145.5 101.6,90.2 101.6,90.2z" />
+    <path
+        android:fillColor="#ffdddddd"
+        android:pathData="M101.6,90.2l-15.1,5c-3.5,1.2 -6.1,4.1 -6.9,7.8l-5.7,47.7h30.8C104.2,145.5 101.6,90.2 101.6,90.2z" />
     //female rightside
-    <path android:fillColor="#ffdddddd" android:pathData="M122.3,90.2l15.1,5c3.5,1.2 6.1,4.1 6.9,7.8l5.7,47.7h-30.8C119.6,145.5 122.3,90.2 122.3,90.2z" />
+    <path
+        android:fillColor="#ffdddddd"
+        android:pathData="M122.3,90.2l15.1,5c3.5,1.2 6.1,4.1 6.9,7.8l5.7,47.7h-30.8C119.6,145.5 122.3,90.2 122.3,90.2z" />
 
-    <path android:fillColor="#ffffffff" android:pathData="M99.6,102.3l-2.9,4.1l7.2,44.3l0.5,0l-2.2,-62.5l-6.6,3.5l0.2,7.5z" />
-    <path android:fillColor="#ffffffff" android:pathData="M120,150.7l7.2,-44.3l-2.9,-4.1l3.7,-3.1l0.3,-7.5l-6.7,-3.5l-2.1,62.5z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M99.6,102.3l-2.9,4.1l7.2,44.3l0.5,0l-2.2,-62.5l-6.6,3.5l0.2,7.5z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M120,150.7l7.2,-44.3l-2.9,-4.1l3.7,-3.1l0.3,-7.5l-6.7,-3.5l-2.1,62.5z" />
 
     //female mouth
-    <path android:fillColor="#fff6ccb8" android:pathData="M129.4,53.4v-7.9c0,-8.4 -9.7,-19 -17.4,-19c-7.7,0 -17.4,10.6 -17.4,19v7.9c-2.1,0 -3.9,1.7 -3.9,3.8v4c0,2.1 1.7,3.8 3.9,3.8c0,8.4 9.7,19.3 17.4,19.3c7.7,0 17.4,-10.9 17.4,-19.3c2.1,0 3.9,-1.7 3.9,-3.8v-4C133.3,55.1 131.5,53.4 129.4,53.4z" />
+    <path
+        android:fillColor="#fff6ccb8"
+        android:pathData="M129.4,53.4v-7.9c0,-8.4 -9.7,-19 -17.4,-19c-7.7,0 -17.4,10.6 -17.4,19v7.9c-2.1,0 -3.9,1.7 -3.9,3.8v4c0,2.1 1.7,3.8 3.9,3.8c0,8.4 9.7,19.3 17.4,19.3c7.7,0 17.4,-10.9 17.4,-19.3c2.1,0 3.9,-1.7 3.9,-3.8v-4C133.3,55.1 131.5,53.4 129.4,53.4z" />
 
-    <path android:fillColor="#ff4f3c30" android:pathData="M93.8,82c-5.5,-18.4 -9.3,-29.8 -6.3,-42.1c5.8,-24.1 35.2,-25.5 38.2,-10.4c0.6,3.2 7.1,6.4 3.8,22.2c-0.3,-0.1 -7.8,-9 -9.8,-13.6C93.8,38 102.4,76.3 93.8,82z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M127.5,105.1c0,-0.7 -0.7,-15 -8,-18.6v1.7c5.9,3.8 6.5,16.8 6.5,17l0,0.7l1.4,-0.1L127.5,105.1z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M104.3,88.1v-1.7c-11.8,6 -6.9,36.9 -6.6,38.3l0.1,0.7l1.4,-0.2l-0.1,-0.7C99.1,124.2 94.3,94.5 104.3,88.1z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M131.6,126.2c-1.3,-0.1 -2.6,-0.6 -3.7,-1.2c3.9,-3.3 6.1,-8.9 5.9,-14c-0.3,-5 -3,-8 -7.1,-8c-4.1,0 -6.8,3.1 -7.1,8c-0.3,5 2,10.7 5.9,14c-1.1,0.6 -2.4,1.1 -3.7,1.2c-0.4,0 -0.7,0.4 -0.6,0.8c0,0.4 0.4,0.6 0.7,0.6c0,0 0.1,0 0.1,0c1.8,-0.2 3.4,-0.8 4.8,-1.7c1.4,0.9 3,1.5 4.8,1.7c0,0 0.1,0 0.1,0c0.4,0 0.7,-0.3 0.7,-0.6C132.3,126.6 132,126.2 131.6,126.2zM121,111.1c0.1,-2 0.9,-6.7 5.7,-6.7c4.8,0 5.6,4.7 5.7,6.7c0.3,4.8 -1.9,10.2 -5.7,13.1C122.9,121.3 120.8,115.9 121,111.1z" />
-    <path android:fillColor="#ff42404d" android:pathData="M120.7,128.1c-0.4,0 -0.8,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C121.5,128 121.1,128.1 120.7,128.1z" />
-    <path android:fillColor="#ff42404d" android:pathData="M132.7,128.1c-0.4,0 -0.8,0 -1.2,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C133.5,128 133.1,128.1 132.7,128.1z" />
-    <path android:fillColor="#ffe6e7e8" android:pathData="M99.1,123.3m-4.3,0a4.3,4.3 0,1 1,8.6 0a4.3,4.3 0,1 1,-8.6 0" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M99.1,119c2.4,0 4.3,1.9 4.3,4.3c0,2.4 -1.9,4.3 -4.3,4.3c-2.4,0 -4.3,-1.9 -4.3,-4.3C94.8,120.9 96.7,119 99.1,119M99.1,117.5c-3.2,0 -5.8,2.6 -5.8,5.8s2.6,5.8 5.8,5.8c3.2,0 5.8,-2.6 5.8,-5.8S102.3,117.5 99.1,117.5L99.1,117.5z" />
-    <path android:fillColor="#ffa7a9ac" android:pathData="M99.1,123.3m-3.1,0a3.1,3.1 0,1 1,6.2 0a3.1,3.1 0,1 1,-6.2 0" />
+    <path
+        android:fillColor="#ff4f3c30"
+        android:pathData="M93.8,82c-5.5,-18.4 -9.3,-29.8 -6.3,-42.1c5.8,-24.1 35.2,-25.5 38.2,-10.4c0.6,3.2 7.1,6.4 3.8,22.2c-0.3,-0.1 -7.8,-9 -9.8,-13.6C93.8,38 102.4,76.3 93.8,82z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M127.5,105.1c0,-0.7 -0.7,-15 -8,-18.6v1.7c5.9,3.8 6.5,16.8 6.5,17l0,0.7l1.4,-0.1L127.5,105.1z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M104.3,88.1v-1.7c-11.8,6 -6.9,36.9 -6.6,38.3l0.1,0.7l1.4,-0.2l-0.1,-0.7C99.1,124.2 94.3,94.5 104.3,88.1z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M131.6,126.2c-1.3,-0.1 -2.6,-0.6 -3.7,-1.2c3.9,-3.3 6.1,-8.9 5.9,-14c-0.3,-5 -3,-8 -7.1,-8c-4.1,0 -6.8,3.1 -7.1,8c-0.3,5 2,10.7 5.9,14c-1.1,0.6 -2.4,1.1 -3.7,1.2c-0.4,0 -0.7,0.4 -0.6,0.8c0,0.4 0.4,0.6 0.7,0.6c0,0 0.1,0 0.1,0c1.8,-0.2 3.4,-0.8 4.8,-1.7c1.4,0.9 3,1.5 4.8,1.7c0,0 0.1,0 0.1,0c0.4,0 0.7,-0.3 0.7,-0.6C132.3,126.6 132,126.2 131.6,126.2zM121,111.1c0.1,-2 0.9,-6.7 5.7,-6.7c4.8,0 5.6,4.7 5.7,6.7c0.3,4.8 -1.9,10.2 -5.7,13.1C122.9,121.3 120.8,115.9 121,111.1z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M120.7,128.1c-0.4,0 -0.8,0 -1.3,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C121.5,128 121.1,128.1 120.7,128.1z" />
+    <path
+        android:fillColor="#ff42404d"
+        android:pathData="M132.7,128.1c-0.4,0 -0.8,0 -1.2,-0.1c-0.6,-0.1 -1,-0.6 -1,-1.2c0.1,-0.6 0.6,-1 1.2,-1c0.7,0.1 1.4,0.1 2.1,0c0.6,-0.1 1.1,0.4 1.2,1c0.1,0.6 -0.4,1.1 -1,1.2C133.5,128 133.1,128.1 132.7,128.1z" />
+    <path
+        android:fillColor="#ffe6e7e8"
+        android:pathData="M99.1,123.3m-4.3,0a4.3,4.3 0,1 1,8.6 0a4.3,4.3 0,1 1,-8.6 0" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M99.1,119c2.4,0 4.3,1.9 4.3,4.3c0,2.4 -1.9,4.3 -4.3,4.3c-2.4,0 -4.3,-1.9 -4.3,-4.3C94.8,120.9 96.7,119 99.1,119M99.1,117.5c-3.2,0 -5.8,2.6 -5.8,5.8s2.6,5.8 5.8,5.8c3.2,0 5.8,-2.6 5.8,-5.8S102.3,117.5 99.1,117.5L99.1,117.5z" />
+    <path
+        android:fillColor="#ffa7a9ac"
+        android:pathData="M99.1,123.3m-3.1,0a3.1,3.1 0,1 1,6.2 0a3.1,3.1 0,1 1,-6.2 0" />
 </vector>
