--- a/app/src/main/res/layout/activity_emergencycontacts.xml
+++ b/app/src/main/res/layout/activity_emergencycontacts.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/Toolbar"
@@ -16,27 +16,27 @@
         android:background="#336fcf"
         app:popupTheme="@style/Theme.AppCompat.NoActionBar">
 
-    <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:onClick="clickBack"
-            android:src="@drawable/ic_arrow_back_black_24dp" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="clickBack"
+                android:src="@drawable/ic_arrow_back_black_24dp" />
 
-        <TextView
-            android:textSize="19.0sp"
-            android:textColor="#f7f7f7"
-            android:layout_weight="10"
-            android:layout_marginTop="16.1dp"
-            android:id="@id/headerEmergencyContacts"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="   Emergency Contacts" />
+            <TextView
+                android:id="@id/headerEmergencyContacts"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16.1dp"
+                android:layout_weight="10"
+                android:text="   Emergency Contacts"
+                android:textColor="#f7f7f7"
+                android:textSize="19.0sp" />
 
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
@@ -49,14 +49,14 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_above="@+id/button_v">
+            android:layout_above="@+id/button_v"
+            android:layout_alignParentTop="true">
 
             <LinearLayout
                 android:id="@+id/rlayout"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/EContactsRV"
@@ -65,46 +65,47 @@
                     android:nestedScrollingEnabled="false">
 
                 </android.support.v7.widget.RecyclerView>
+
                 <LinearLayout
-                    android:gravity="center"
-                    android:orientation="vertical"
+                    android:layout_marginTop="100.0dip"
                     android:id="@id/linearLayoutNoEmergencyContacts"
-                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.0">
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_weight="1.0"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@id/imageViewNavItemIcon"
                         android:layout_width="150.0dip"
                         android:layout_height="150.0dip"
-                        android:layout_margin="16.0dip"
-                        android:src="@drawable/image_mobile_emergency_contacts"
                         android:layout_alignTop="@id/imageView4"
                         android:layout_centerHorizontal="true"
+                        android:layout_margin="16.0dip"
+                        android:src="@drawable/image_mobile_emergency_contacts"
                         app:civ_border_color="#ffeeeeee"
-                        app:civ_border_width="4.0dip"
-                        xmlns:app="http://schemas.android.com/apk/res-auto" />
+                        app:civ_border_width="4.0dip" />
 
                     <TextView
-                        android:textSize="18.0sp"
-                        android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                        android:gravity="center"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50.0dip"
                         android:layout_marginRight="50.0dip"
-                        android:text="" />
+                        android:gravity="center"
+                        android:text=""
+                        android:textColor="#686464"
+                        android:textSize="18.0sp" />
 
                     <TextView
-                        android:textSize="16.0sp"
-                        android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                        android:gravity="center"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50.0dip"
+                        android:layout_marginRight="50.0dip"
                         android:layout_marginTop="8.0dip"
-                        android:layout_marginRight="50.0dip"
-                        android:text="Any number will get a call in case of Emergency." />
+                        android:gravity="center"
+                        android:text="Any number will get a call in case of Emergency."
+                        android:textColor="#686464"
+                        android:textSize="16.0sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -112,25 +113,25 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/button_v"
-            android:background="#fffefefe"
             android:layout_width="fill_parent"
             android:layout_height="64.0dip"
+            android:layout_alignParentBottom="true"
+            android:background="#fffefefe"
             card_view:cardCornerRadius="6.0dip"
             card_view:cardElevation="12.0dip"
-            card_view:cardUseCompatPadding="false"
-            android:layout_alignParentBottom="true">
+            card_view:cardUseCompatPadding="false">
 
             <LinearLayout
-                android:onClick="goToAddActivity"
-                android:gravity="center"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal"
                 android:id="@id/linearLayoutAddEmergencyContact"
-                android:background="@drawable/background_button"
-                android:padding="12.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8.0dip">
+                android:layout_gravity="bottom"
+                android:layout_margin="8.0dip"
+                android:background="@drawable/background_button"
+                android:gravity="center"
+                android:onClick="goToAddActivity"
+                android:orientation="horizontal"
+                android:padding="12.0dip">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -139,19 +140,18 @@
                     android:tint="@color/white" />
 
                 <TextView
-                    android:textSize="16.0sp"
-                    android:textColor="@color/white"
-                    android:gravity="center"
                     android:id="@id/textViewAddEmergencyContacts"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12.0dip"
+                    android:gravity="center"
                     android:text="ADD EMERGENCY CONTACT"
-                    android:textAllCaps="true" />
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="16.0sp" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
     </RelativeLayout>
-
 
 </LinearLayout>
