--- a/app/src/main/res/layout/activity_my_appointments.xml
+++ b/app/src/main/res/layout/activity_my_appointments.xml
@@ -32,10 +32,10 @@
 
             <TextView
                 android:id="@id/headerMyAppointment"
-                android:layout_weight="10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16.1dp"
+                android:layout_weight="10"
                 android:text="  My Appointment"
                 android:textColor="@color/white"
                 android:textSize="19.0sp" />
@@ -43,53 +43,69 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/MyAppointmentRV"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_above="@+id/button_v"
+            android:layout_alignParentTop="true">
 
-        </android.support.v7.widget.RecyclerView>
-
-        <LinearLayout
-            android:id="@id/linearLayoutNoMyAppointment"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:background="@color/white"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@id/imageViewNavItemIcon"
-                android:layout_width="150.0dip"
-                android:layout_height="150.0dip"
-                android:layout_alignTop="@id/imageView4"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="16.0dip"
-                android:src="@drawable/image_my_appointment"
-                app:civ_border_color="#ffeeeeee"
-                app:civ_border_width="4.0dip" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100.0dip"
-                android:layout_marginRight="100.0dip"
-                android:gravity="center"
-                android:text="You Haven’t Added Any Appointments Yet"
-                android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                android:textSize="18.0sp" />
-        </LinearLayout>
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/MyAppointmentRV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false">
+
+                </android.support.v7.widget.RecyclerView>
+
+                <LinearLayout
+                    android:id="@id/linearLayoutNoMyAppointment"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="100.0dip"
+                    android:layout_weight="1.0"
+                    android:background="@color/white"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@id/imageViewNavItemIcon"
+                        android:layout_width="150.0dip"
+                        android:layout_height="150.0dip"
+                        android:layout_alignTop="@id/imageView4"
+                        android:layout_centerHorizontal="true"
+                        android:layout_margin="16.0dip"
+                        android:src="@drawable/image_my_appointment"
+                        app:civ_border_color="#ffeeeeee"
+                        app:civ_border_width="4.0dip" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="100.0dip"
+                        android:layout_marginRight="100.0dip"
+                        android:gravity="center"
+                        android:text="You Haven’t Added Any Appointments Yet"
+                        android:textColor="@color/fiftyFivePercentOpaqueBlack"
+                        android:textSize="18.0sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/button_v"
             android:layout_width="fill_parent"
             android:layout_height="64.0dip"
+            android:layout_alignParentBottom="true"
             android:background="#fffefefe"
             card_view:cardCornerRadius="6.0dip"
             card_view:cardElevation="12.0dip"
@@ -125,5 +141,5 @@
                     android:textSize="16.0sp" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
