--- a/app/src/main/res/layout/activity_pillreminder.xml
+++ b/app/src/main/res/layout/activity_pillreminder.xml
@@ -79,8 +79,8 @@
             android:layout_height="300.0dip"
             android:layout_margin="16.0dip"
             android:src="@drawable/no_medicine"
-            app:civ_border_color="#ffeeeeee"
-            app:civ_border_width="4.0dip"
+            app:civ_border_color="#d6d2d2"
+            app:civ_border_width="5.0dip"
             xmlns:app="http://schemas.android.com/apk/res-auto" />
 
 
